Improve randomization sidebar

--- a/index.html
+++ b/index.html
@@ -528,20 +528,20 @@
         // Lista de candidatos actualizada con nombres en inglés para GeoJSON
     var candidates = [
       { name: "Madeira", geoName: "Portugal", lat: 32.7607, lng: -16.9595 },
-      { name: "Tunez", geoName: "Tunisia", lat: 36.8065, lng: 10.1815 },
-      { name: "Senegal", geoName: "Senegal", lat: 14.7167, lng: -17.4677 },
-      { name: "Malta", geoName: "Malta", lat: 35.9375, lng: 14.3754 },
+      { name: "Finlandia", geoName: "Finland", lat: 60.1699, lng: 24.9384 },
       { name: "Chipre", geoName: "Cyprus", lat: 35.1264, lng: 33.4299 },
       { name: "Croacia", geoName: "Croatia", lat: 45.1000, lng: 15.2000 },
+      { name: "Senegal", geoName: "Senegal", lat: 14.7167, lng: -17.4677 },
       { name: "Macedonia", geoName: "Macedonia", lat: 41.6086, lng: 21.7453 },
+      { name: "Malta", geoName: "Malta", lat: 35.9375, lng: 14.3754 },
       { name: "Liechtenstein", geoName: "Liechtenstein", lat: 47.1660, lng: 9.5554 },
       { name: "Estonia", geoName: "Estonia", lat: 59.4370, lng: 24.7536 },
+      { name: "Noruega", geoName: "Norway", lat: 59.9139, lng: 10.7522 },
       { name: "Letonia", geoName: "Latvia", lat: 56.9460, lng: 24.1059 },
+      { name: "Tunez", geoName: "Tunisia", lat: 36.8065, lng: 10.1815 },
       { name: "Lituania", geoName: "Lithuania", lat: 54.6872, lng: 25.2797 },
       { name: "Eslovenia", geoName: "Slovenia", lat: 46.1512, lng: 14.9955 },
-      { name: "Suecia", geoName: "Sweden", lat: 59.3293, lng: 18.0686 },
-      { name: "Noruega", geoName: "Norway", lat: 59.9139, lng: 10.7522 },
-      { name: "Finlandia", geoName: "Finland", lat: 60.1699, lng: 24.9384 }
+      { name: "Suecia", geoName: "Sweden", lat: 59.3293, lng: 18.0686 }
     ];
 
     // Update the GeoJSON section
