--- a/index.html
+++ b/index.html
@@ -432,10 +432,22 @@
     }
 
     .country-item.removed {
-      background: #ddd;
-      color: #999;
+      background: #e0e0e0 !important;
+      color: #666 !important;
       text-decoration: line-through;
       pointer-events: none;
+      position: relative;
+    }
+
+    .country-item.removed::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
     }
 
     .sidebar-title {
@@ -493,6 +505,54 @@
         transform: translate(-50%, -20px);
         opacity: 0;
       }
+    }
+
+    @keyframes shakeItem {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-4px); }
+      75% { transform: translateX(4px); }
+    }
+
+    @keyframes fadeOutItem {
+      0% { 
+        transform: scale(1);
+        opacity: 1;
+      }
+      50% {
+        transform: scale(1.1);
+        opacity: 0.5;
+      }
+      100% { 
+        transform: scale(0.9);
+        opacity: 0;
+      }
+    }
+
+    .country-item.incorrect {
+      animation: shakeItem 0.4s ease-in-out;
+      background: rgba(255, 51, 51, 0.2);
+    }
+
+    /* Update the animations and styles for country items */
+    @keyframes correctItem {
+      0% { 
+        transform: scale(1);
+        background: #f0f9f0;
+      }
+      50% {
+        transform: scale(1.1);
+        background: #e0e0e0;
+        color: #666;
+      }
+      100% { 
+        transform: scale(1);
+        background: #e0e0e0;
+        color: #666;
+      }
+    }
+
+    .country-item.correct {
+      animation: correctItem 0.5s ease-out forwards;
     }
   </style>
 </head>
@@ -904,6 +964,16 @@
 
       if (clues[currentClueIndex].remove.includes(country)) {
         showAnimation('¡Correcto! 🎉', true);
+        
+        // Add the animation class
+        const countryItem = document.getElementById(`country-item-${country}`);
+        if (countryItem) {
+          countryItem.classList.add('correct');
+          // Wait for the animation to complete before adding the removed class
+          setTimeout(() => {
+            countryItem.classList.add('removed');
+          }, 500);
+        }
 
         layer.setStyle({
           fillColor: '#808080',
@@ -941,6 +1011,16 @@
         }
       } else {
         showAnimation('¡Incorrecto! ❌', false);
+        
+        // Add and remove the incorrect animation class
+        const countryItem = document.getElementById(`country-item-${country}`);
+        if (countryItem) {
+          countryItem.classList.add('incorrect');
+          setTimeout(() => {
+            countryItem.classList.remove('incorrect');
+          }, 400);
+        }
+
         errorCount++;
         document.getElementById("errorCount").innerHTML = `${errorCount} fallos`;
         showMessage("¡Error! Este país sí cumple la afirmación.", false);
