Fix Madeira Portugal country

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       },
       { 
         text: "Tiene inviernos con temperaturas menores a 15°C", 
-        remove: ["Madeira", "Chipre"],
+        remove: ["Portugal (Madeira)", "Chipre"],
         explanations: {
-          "Madeira": "Madeira tiene un clima subtropical con inviernos suaves, temperaturas promedio entre 16-20°C",
+          "Portugal (Madeira)": "Madeira tiene un clima subtropical con inviernos suaves, temperaturas promedio entre 16-20°C",
           "Chipre": "Chipre tiene inviernos mediterráneos suaves con temperaturas promedio entre 15-18°C en la costa"
         }
       },
@@ -159,7 +159,7 @@
 
         // Lista de candidatos actualizada con nombres en inglés para GeoJSON
     var candidates = [
-      { name: "Madeira", geoName: "Portugal", lat: 32.7607, lng: -16.9595 },
+      { name: "Portugal (Madeira)", geoName: "Portugal", lat: 32.7607, lng: -16.9595 },
       { name: "Finlandia", geoName: "Finland", lat: 60.1699, lng: 24.9384 },
       { name: "Chipre", geoName: "Cyprus", lat: 35.1264, lng: 33.4299 },
       { name: "Croacia", geoName: "Croatia", lat: 45.1000, lng: 15.2000 },
