Add curiosities in each correct selection

--- a/index.html
+++ b/index.html
@@ -99,7 +99,21 @@
         text: "El inglés no es idioma oficial", 
         remove: ["Malta"],
         explanations: {
-          "Malta": "Malta tiene el inglés como idioma oficial junto con el maltés desde su independencia en 1964"
+          "Malta": "Malta tiene el inglés como idioma oficial junto con el maltés desde su independencia en 1964",
+          "Finlandia": "El finés y el sueco son los únicos idiomas oficiales de Finlandia",
+          "Estonia": "El estonio es el único idioma oficial de Estonia",
+          "Chipre": "El griego y el turco son los idiomas oficiales de Chipre",
+          "Croacia": "El croata es el único idioma oficial de Croacia",
+          "Senegal": "El francés es el único idioma oficial de Senegal",
+          "Macedonia": "El macedonio es el único idioma oficial de Macedonia del Norte",
+          "Liechtenstein": "El alemán es el único idioma oficial de Liechtenstein",
+          "Noruega": "El noruego es el único idioma oficial de Noruega",
+          "Letonia": "El letón es el único idioma oficial de Letonia",
+          "Tunez": "El árabe es el único idioma oficial de Túnez",
+          "Lituania": "El lituano es el único idioma oficial de Lituania",
+          "Eslovenia": "El esloveno es el único idioma oficial de Eslovenia",
+          "Suecia": "El sueco es el único idioma oficial de Suecia",
+          "Portugal (Madeira)": "El portugués es el único idioma oficial de Madeira"
         }
       },
       { 
@@ -107,7 +121,20 @@
         remove: ["Tunez", "Senegal"],
         explanations: {
           "Tunez": "Túnez está ubicado en el norte de África, en la costa mediterránea",
-          "Senegal": "Senegal está ubicado en África occidental, bordeando el Océano Atlántico"
+          "Senegal": "Senegal está ubicado en África occidental, bordeando el Océano Atlántico",
+          "Finlandia": "Finlandia está ubicada en el norte de Europa, en la región nórdica",
+          "Estonia": "Estonia está ubicada en el norte de Europa, en la región báltica",
+          "Chipre": "Chipre está ubicada en el sur de Europa, en el Mediterráneo oriental",
+          "Croacia": "Croacia está ubicada en el sureste de Europa, en los Balcanes",
+          "Macedonia": "Macedonia del Norte está ubicada en el sureste de Europa, en los Balcanes",
+          "Malta": "Malta está ubicada en el sur de Europa, en el Mediterráneo central",
+          "Liechtenstein": "Liechtenstein está ubicado en Europa Central, entre Austria y Suiza",
+          "Noruega": "Noruega está ubicada en el norte de Europa, en la península escandinava",
+          "Letonia": "Letonia está ubicada en el norte de Europa, en la región báltica",
+          "Lituania": "Lituania está ubicada en el norte de Europa, en la región báltica",
+          "Eslovenia": "Eslovenia está ubicada en el sur de Europa, en los Balcanes",
+          "Suecia": "Suecia está ubicada en el norte de Europa, en la península escandinava",
+          "Portugal (Madeira)": "Madeira es una región autónoma de Portugal, país europeo"
         }
       },
       { 
@@ -115,7 +142,18 @@
         remove: ["Portugal (Madeira)", "Chipre"],
         explanations: {
           "Portugal (Madeira)": "Madeira tiene un clima subtropical con inviernos suaves, temperaturas promedio entre 16-20°C",
-          "Chipre": "Chipre tiene inviernos mediterráneos suaves con temperaturas promedio entre 15-18°C en la costa"
+          "Chipre": "Chipre tiene inviernos mediterráneos suaves con temperaturas promedio entre 15-18°C en la costa",
+          "Finlandia": "Finlandia tiene inviernos muy fríos, con temperaturas promedio por debajo de 0°C",
+          "Estonia": "Estonia tiene inviernos fríos, con temperaturas promedio entre -5°C y 0°C",
+          "Croacia": "Croacia tiene inviernos fríos en el interior, con temperaturas promedio entre 0°C y 5°C",
+          "Macedonia": "Macedonia tiene inviernos fríos, con temperaturas promedio entre 0°C y 3°C",
+          "Malta": "Malta tiene inviernos suaves pero con temperaturas promedio entre 12-14°C",
+          "Liechtenstein": "Liechtenstein tiene inviernos fríos, con temperaturas promedio entre -1°C y 3°C",
+          "Noruega": "Noruega tiene inviernos muy fríos, con temperaturas promedio por debajo de 0°C",
+          "Letonia": "Letonia tiene inviernos fríos, con temperaturas promedio entre -5°C y 0°C",
+          "Lituania": "Lituania tiene inviernos fríos, con temperaturas promedio entre -5°C y 0°C",
+          "Eslovenia": "Eslovenia tiene inviernos fríos, con temperaturas promedio entre 0°C y 5°C",
+          "Suecia": "Suecia tiene inviernos muy fríos, con temperaturas promedio por debajo de 0°C"
         }
       },
       { 
@@ -123,7 +161,18 @@
         remove: ["Liechtenstein", "Macedonia"],
         explanations: {
           "Liechtenstein": "Liechtenstein es un país sin salida al mar, ubicado entre Suiza y Austria",
-          "Macedonia": "Macedonia del Norte es un país sin salida al mar en los Balcanes"
+          "Macedonia": "Macedonia del Norte es un país sin salida al mar en los Balcanes",
+          "Finlandia": "Finlandia tiene costa en el mar Báltico y el golfo de Botnia",
+          "Estonia": "Estonia tiene costa en el mar Báltico y el golfo de Finlandia",
+          "Chipre": "Chipre es una isla en el mar Mediterráneo",
+          "Croacia": "Croacia tiene una extensa costa en el mar Adriático",
+          "Malta": "Malta es un archipiélago en el mar Mediterráneo",
+          "Noruega": "Noruega tiene una extensa costa en el mar del Norte y el mar de Noruega",
+          "Letonia": "Letonia tiene costa en el mar Báltico",
+          "Lituania": "Lituania tiene una pequeña costa en el mar Báltico",
+          "Eslovenia": "Eslovenia tiene una pequeña costa en el mar Adriático",
+          "Suecia": "Suecia tiene costa en el mar Báltico y el golfo de Botnia",
+          "Portugal (Madeira)": "Madeira es un archipiélago en el océano Atlántico"
         }
       },
       { 
@@ -132,14 +181,21 @@
         explanations: {
           "Croacia": "Croacia tiene costa en el mar Adriático, no en el mar Báltico",
           "Eslovenia": "Eslovenia tiene una pequeña costa en el mar Adriático, no en el mar Báltico",
-          "Noruega": "Noruega tiene costa en el mar del Norte y mar de Noruega, pero no en el mar Báltico"
+          "Noruega": "Noruega tiene costa en el mar del Norte y mar de Noruega, pero no en el mar Báltico",
+          "Finlandia": "Finlandia tiene una extensa costa en el mar Báltico",
+          "Estonia": "Estonia tiene costa en el mar Báltico y el golfo de Finlandia",
+          "Letonia": "Letonia tiene una extensa costa en el mar Báltico",
+          "Lituania": "Lituania tiene una pequeña costa en el mar Báltico",
+          "Suecia": "Suecia tiene una extensa costa en el mar Báltico"
         }
       },
       { 
         text: "Su capital tiene salida a un golfo", 
         remove: ["Lituania"],
         explanations: {
-          "Lituania": "Vilna, la capital de Lituania, está ubicada tierra adentro y no tiene acceso directo al mar"
+          "Lituania": "Vilna, la capital de Lituania, está ubicada tierra adentro y no tiene acceso directo al mar",
+          "Finlandia": "Helsinki, la capital de Finlandia, está ubicada en el golfo de Finlandia",
+          "Estonia": "Tallin, la capital de Estonia, está ubicada en el golfo de Finlandia"
         }
       },
       { 
@@ -147,7 +203,9 @@
         remove: ["Letonia", "Suecia"],
         explanations: {
           "Letonia": "Riga, la capital de Letonia, está a más de 80km por mar de cualquier otra capital europea",
-          "Suecia": "Estocolmo, la capital de Suecia, está a más de 80km por mar de cualquier otra capital europea"
+          "Suecia": "Estocolmo, la capital de Suecia, está a más de 80km por mar de cualquier otra capital europea",
+          "Finlandia": "Helsinki está a aproximadamente 80km de Tallin por mar",
+          "Estonia": "Tallin está a aproximadamente 80km de Helsinki por mar"
         }
       }
     ];
@@ -602,7 +660,8 @@
         }
 
         // Show positive feedback message
-        showMessage(`¡Correcto! ${country} sí cumple con la afirmación.`, true);
+        const explanation = clues[currentClueIndex].explanations[country];
+        showMessage(`¡Correcto! ${explanation || "¡Correcto! Este país cumple con la afirmación"}`, true);
 
         // Add to list of correctly selected countries for this clue
         if (!clues[currentClueIndex].correctlySelected) {
@@ -833,7 +892,7 @@
         
         // Show explanation for incorrect selection
         const explanation = clues[currentClueIndex].explanations[country];
-        showMessage(explanation || "¡Error! Este país no cumple la afirmación.", false);
+        showMessage(`¡Incorrecto! ${explanation}` || "¡Incorrecto! Este país no cumple la afirmación.", false);
 
         // Verificar si perdió (3 fallos) antes de continuar con cualquier otra lógica
         if (errorCount >= 3) {
@@ -1042,7 +1101,7 @@
                             vibrate([100, 50, 100]);
                         }
                     }, 2000);
-                }, 3500); // Wait for message to complete
+                }, 3500);
             }
         }
       }
